[package]
name = "poe-parser"
version = "0.1.0"
description = "Path Of Exile item parser"
authors = ["loobreak"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
